# esp32-codelab

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  sdkconfig
composite_video_lvgl/: sdkconfig.old
composite_video_lvgl/main/: init.c  main.c
main/: CMakeLists.txt  init.h  lv_conf.h
